# Thre_seg

./: CMakeLists.txt  README.md  main.cpp
